--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
-  "plugins": ["prettier"],
+  "extends": "next",
   "rules": {
-    "prettier/prettier": ["error", { "endOfLine": "auto" }]
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
