--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Create your pass for nodemailer. Follow the steps from README.md
-NODEMAILER_USER=aamnansari29@gmail.com
-NODEMAILER_PASS=bsytikejrgucixqi
+# NODEMAILER_USER=aamnansari29@gmail.com
+# NODEMAILER_PASS=bsytikejrgucixqi
